data/derived/comb/progs/unify/prog6309.ml.out
Characters 14-16:
  let _ = sqsum [];;
                ^^
Error: This expression has type 'a list
       but an expression was expected of type int
